--- a/src/.htaccess
+++ b/src/.htaccess
@@ -4,3 +4,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(([A-Za-z0-9\-]+/)*[A-Za-z0-9\-]+)?$ $1.php
+RewriteRule ^api/([0-9a-zA-Z_-]*)$ api.php?name=$1 [NC,L]
